	  as well. New .ui files do not store image information. Thus I moved the 3 icons from
	  qfiledialog.ui into their own files.
	  TODO: Qt4 does not support file preview in file dialogs yet. The relevant code (wallpaper
	  preview) is disabled. Now we either have to implement an image previewer, or forget about
	  this feature. (Orcan)
14.11.2010
        - renamed deicsonze2 files and classes with '2' suffixes
        - Applied patch by Orcan to convert populateAddSynth(). (Tim)
        - Changed all setMargin() calls to setContentsMargins(). (setMargin() is obsoleted!) (Tim)
        - Fixed crash in MusE::closeEvent() upon close: save, skip, abort? = abort. (Tim)
          TODO: Some other suspicious looking closeEvent()s. May need to fix...
12.11.2010
        - Fixed arranger alignment issues - set layout margins to zero. (Tim)
          TODO: Track list items aligned to canvas tracks are still off by one lousy vertical pixel.
11.11.2010
        - WIP: Mixer and strips re-designed to be theme/font friendly - no more fixed STRIP_WIDTH. (Tim)
        - Fixed Slider, Knob and DoubleEntry classes. Knob anti-aliasing applied (where allowed).
        - Transport handle colour fixed - added setAutoFillBackground(true). 
10.11.2010
        - Ported transport window to Qt4. The handle color needs a fix (Orcan) 
09.11.2010
        - Fixed audio and midi strips and converted to Qt4. Looks OK now, but will be better... (Tim)
          TODO: Convert Slider, Knob, EffectRack, ComboBox classes etc. (After that the strips will be perfect.)
08.11.2010
	- Add missing link to libdl.so. Caused bulid failure on Fedora 14 (Orcan)
        - Fixed strip name label colours, also name label auto-font-sizing. (Tim) 
        - Updated some window flags (stay on top, delete on close...) (Tim)
07.11.2010
        - Mixer is fixed and converted to QT4. (Tim)
        - Conversion of TLLayout class to QT4. 
        - Conversion of TempoEdit class to QT4. Displays proper doubles now.
06.11.2010